# paper-xyz

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  pixi.toml  pyproject.toml  ty.toml
.agents/loop/: loop.md  todo.md
.agents/skills/loop-start/: SKILL.md
.agents/skills/pdf-docling-llama-serve-md/: SKILL.md
.agents/skills/pdf-png-md-direct-context/: SKILL.md
.agents/skills/pdf-png-md-direct-context/agents/: openai.yaml
agent/: README.md  docling_dots_mocr_ref.py  docling_dots_mocr_rerf.py  docling_ref.py  docling_rerf.py  llama-serve-cu129.sh  llama-serve.sh  marker_config_fast.json  marker_config_quality.json  marker_ref.py  marker_single_ref.py  marker_single_ref.sh  markitdown_ref.py  markitdown_ref.sh  olmocr_dots_mocr_ref.py  olmocr_dots_mocr_rerf.py  olmocr_ref.py  paper_xyz_ref.py  paper_xyz_rerf.py  pdf-docling-md.md  pdf-png-md.md  pdf-png-ocr-md.md  pdf_split_ref.py  pdf_to_png.py  pdf_to_png_ref.py  pymupdf4llm_ref.py  pymupdf_ref.py  pypdf_ref.py  surya_ocr_ref.py
md/: .gitignore  AGENTS.md
scripts/: README.md  batch_pdf_convert.py  debug.sh  debug_openai_latency.py  fetch_hf_ocr_models.py  hfd.sh  llama-cli.sh  llama-serve.sh  mlx_lm.server.sh  mlx_vlm.generate.sh  mlx_vlm.sh  pdf_to_png.py
src/paper_xyz/: __init__.py  _api.py  _pdf.py  _types.py  api.py  converter.py  document_converter.py  model_services.py  parsing.py  pdf.py  prompts.py  types.py
src/paper_xyz/datamodel/: base_models.py  pipeline_options.py  pipeline_options_vlm_model.py  stage_model_specs.py  vlm_engine_options.py
src/paper_xyz/pipeline/: vlm_pipeline.py
(+2 files in other folders)
